[package]
name = "arcade"
version = "0.0.1"
authors = ["Peter Jin <peterhaijin@gmail.com>"]
build = "build.rs"

[lib]
name = "arcade"
path = "src/lib.rs"

[build-dependencies]
walkdir = "^1"

[dependencies]
libc = "^0.2"
rand = "*"
densearray = { path = "../libdensearray" }
genrl = { path = "../libgenrl" }
image_interpolate = { path = "../libimage_interpolate" }
ipp = { path = "../libipp" }
operator = { path = "../liboperator" }
rng = "^0.1"
stb_image = { path = "../rust-stb-image" }
